--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-	  	<meta charset="utf-8">
-	  	<title>User Testing 360°</title>
-	</head>
-	<body>
-		<!--Escribe aqui tu codigo-->
-    </body>
-</html>
+<!DOCTYPE html><html>(lang="en")<head><title></title></head><body><div class="row fondo"><h3>USER TESTING 360<ul class="menu"></ul></h3></div></body></html>
