--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<!DOCTYPE html><html>(lang="en")<head><title></title></head><body><div class="row fondo"><h3>USER TESTING 360<ul class="menu"></ul></h3></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script type="text/javascript" src="js/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="js/booststrap.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="row fondo">
+        <div class="capa">
+          <div class="row"><img src="image/user-r.png" class="pull-left spac_lados">
+            <ul class="spac_lados list-unstyled list-inline pull-right">
+              <li class="menu"><a href="#" class="color_white">¿Qué me ofrece?</a></li>
+              <li><a href="#" class="color_white">¿Cómo funciona?</a></li>
+              <li><a href="#" class="color_white">¿Por qué usarlo?</a></li>
+              <li><a href="#" class="color_white">Contáctanos</a></li>
+            </ul>
+            <h1 class="titulo text-center">Obten videos de persona utilizando este siio Web.</h1>
+          </div>
+        </div>
+      </div>
+      <div class="row fondo_celes">
+        <div class="col-md-6 text-right">
+          <h4>Pruebalo Gratis</h4>
+          <p>Obten un video gratis en 5 minutos</p>
+        </div>
+        <div class="col-md-6 text-left">
+          <button class="btn btn-primary btp">Prueba Gartis</button>
+        </div>
+      </div>
+      <div class="row text-center servicios">
+        <h2 class="subtitulos">Nuestros Servicios</h2>
+        <div class="col-md-4">
+          <p class="tamano_icn"><i class="icon-video"></i></p>
+          <h4 class="color_blu">Prueba Gratis</h4>
+          <p>lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc</p>
+        </div>
+        <div class="col-md-4">
+          <p class="tamano_icn"><i class="icon-clock"></i></p>
+          <h4 class="color_blu">Prueba Gratis</h4>
+          <p>lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc</p>
+        </div>
+        <div class="col-md-4">
+          <p class="tamano_icn"><i class="icon-documents"></i></p>
+          <h4 class="color_blu">Prueba Gratis</h4>
+          <p>lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc</p>
+        </div><img src="image/separador.png" class="icono_fin">
+      </div>
+    </div>
+  </body>
+</html>
