--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row fondo">
         <div class="capa">
-          <div class="row"><img src="image/user-r.png" class="pull-left spac_lados">
+          <div class="row"><img src="image/user-r.png" class="pull-left spac_lados img-responsive">
             <ul class="spac_lados list-unstyled list-inline pull-right">
               <li class="menu"><a href="#" class="color_white">¿Qué me ofrece?</a></li>
               <li><a href="#" class="color_white">¿Cómo funciona?</a></li>
@@ -51,6 +51,22 @@
           <h4 class="color_blu">Prueba Gratis</h4>
           <p>lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc</p>
         </div><img src="image/separador.png" class="icono_fin">
+        <hr>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="color_blu text-center">Ejemplo de<img src="image/logo-2.jpg" class="tam_lg"></h2>
+          <p>Lorem hashhas shhahsha ashahs sjcshc sajcasjcsac sackcjsacsdhajscascjasjsjjas
+            <p class="color_blu">nsndnasdnandsdasad</p>
+          </p>
+          <p>sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j cjasc acj cj cjas cjs cjsac jascsa cjasc jac ajsc jcs acjas cj scj jas cjsa cjsa c caca</p><img src="image/flecha.png" class="btp mg_cent img-responsive">
+        </div>
+        <div class="col-md-6">
+          <p>video</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 img_cp"><img src="image/sec-2.jpg" class="img_lap img-responsive"></div>
       </div>
     </div>
   </body>
