--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Contacto</title>
-</head>
-<body>
-<!--Escribe aqui tu codigo-->
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script type="text/javascript" src="js/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="js/booststrap.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body class="fondo_contc">
+    <form class="form-horizontal">
+      <div class="h1 btp">Formulario User Testing 360</div>
+      <hr class="btp">
+      <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
+        <div class="col-sm-10">
+          <input id="inputEmail3" type="email" placeholder="Email" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+          <input id="inputEmail3" type="password" placeholder="Password" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Deja tu URL</label>
+        <div class="col-sm-10">
+          <input id="inputEmail3" type="password" placeholder="Password" class="form-control">
+        </div>
+      </div>
+      <div class="form-group text-center">
+        <button type="submit" class="btn btn-sm btn-primary">Enviar Email</button>
+        <P class="pull-left">Pawer by Laboratoria</P>
+        <p class="pull-right">Report abuse</p>
+      </div>
+    </form>
+  </body>
 </html>
