--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button class="btn btn-primary btp">Prueba Gartis</button>
         </div>
       </div>
-      <div class="row text-center servicios">
+      <div class="row text-center">
         <h2 class="subtitulos">Nuestros Servicios</h2>
         <div class="col-md-4">
           <p class="tamano_icn"><i class="icon-video"></i></p>
@@ -54,19 +54,75 @@
         <hr>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 mgle4 mga6">
           <h2 class="color_blu text-center">Ejemplo de<img src="image/logo-2.jpg" class="tam_lg"></h2>
           <p>Lorem hashhas shhahsha ashahs sjcshc sajcasjcsac sackcjsacsdhajscascjasjsjjas
             <p class="color_blu">nsndnasdnandsdasad</p>
           </p>
           <p>sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j cjasc acj cj cjas cjs cjsac jascsa cjasc jac ajsc jcs acjas cj scj jas cjsa cjsa c caca</p><img src="image/flecha.png" class="btp mg_cent img-responsive">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mga6">
           <p>video</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 img_cp"><img src="image/sec-2.jpg" class="img_lap img-responsive"></div>
+        <div class="col-md-6"><img src="image/sec-2.jpg" class="img_lap img-responsive">
+          <p class="derecha"><i class="icon-pencil icon"></i></p>
+          <p class="derecha"><i class="icon-search icon"></i></p>
+          <p class="derecha"><i class="icon-pencil icon"></i></p><img src="image/separador.png" class="derecha_icon">
+        </div>
+        <div class="col-md-6 mgle4">
+          <h4 class="mga6">Lo Quiero ¿Que hago?</h4>
+          <h6 class="color_blu">Paso1:envianos tu link</h6>
+          <p class="mgb5">Al darle click asdj sadjsand asjc csajc sc cajs sajc jcs a csja cjsac</p>
+          <h6 class="color_blu">Paso2:envianos tu link</h6>
+          <p>Al darle click asdj sadjsand asjc</p>
+          <ul>
+            <li>A primera vista</li>
+            <li>A primera vista</li>
+            <li>A primera vista</li>
+          </ul>
+          <p class="mgb5">hjhb jhb j jnbb hhhh jjjj</p>
+          <h6 class="color_blu">Paso3:envianos tu link</h6>
+          <p class="mgb5">Al darle click asdj sadjsand asjc csajc sc cajs sajc jcs a csja cjsac</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 mgle4 mga6">
+          <h2 class="color_blu text-center">Por qué usar<img src="image/logo-2.jpg" class="tam_lg"></h2>
+          <p>Lorem ha adas dad ad asda shhas shhahsha ashahs sjcshc sajcasjcsacspackcjsacsdhajscascjasjsjjas </p>
+          <spam>sjjasdjsajd</spam>
+          <p>sajdnasjdnsajsdasd asdascas cjasjcndjc dacnjdncjadncjdancjandcjda</p>
+          <spam>ajnajdfnajfna</spam>
+          <p>asjnskaakjfdkajad dvjdv dvjdsjvsdv</p>
+          <ul class="btp">
+            <li>A primera vista</li>
+            <li>A primera vista</li>
+            <li>A primera vista</li>
+          </ul>
+          <p>sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j jasjcs acjas cj scj jas cjsa cjsa c caca</p>
+        </div>
+        <div class="col-md-6 mga6"><img src="image/banner.jpg" class="imgjov"></div>
+      </div>
+      <div class="row text-center fondo_celes">
+        <div class="col-md-6 btp">
+          <h4>Pruebalo Gratis</h4>
+          <p>Obten un video gratis en 5 minutos</p>
+        </div>
+        <div class="col-md-6 btp">
+          <button class="btn btn-primary btp">Prueba Gartis</button>
+        </div>
+      </div>
+      <div class="row fondo_azul">
+        <div class="col-md-6 mg2">
+          <p>Escribanos a</p>
+          <p class="color_blu">sjsajascnjsacn@gmail.com</p>
+          <p>Telefono: 4651516</p>
+        </div>
+        <div class="col-md-6 mg2">
+          <p class="pdlefmas"><i class="icon-pencil icon_footer"></i><i class="icon-search icon_footer"></i></p>
+          <p class="pdleft">csnjc@cnscacsac sach</p>
+        </div>
       </div>
     </div>
   </body>
