--- a/contact.html
+++ b/contact.html
@@ -15,26 +15,28 @@
       <div class="h1 btp">Formulario User Testing 360</div>
       <hr class="btp">
       <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
-        <div class="col-sm-10">
+        <label for="inputEmail3" class="col-sm-4 control-label">Nombre <span> * </span></label>
+        <div class="col-sm-8">
+          <input id="inputEmail3" type="text" placeholder="nombre" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-4 control-label">Email<span> * </span></label>
+        <div class="col-sm-8">
           <input id="inputEmail3" type="email" placeholder="Email" class="form-control">
         </div>
       </div>
       <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Email</label>
-        <div class="col-sm-10">
-          <input id="inputEmail3" type="password" placeholder="Password" class="form-control">
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Deja tu URL</label>
-        <div class="col-sm-10">
-          <input id="inputEmail3" type="password" placeholder="Password" class="form-control">
+        <label for="inputPassword3" class="col-sm-4 control-label">Deja tu URL <span> * </span></label>
+        <div class="col-sm-8">
+          <textarea id="inputEmail3" type="text" placeholder="www." rows="3" class="form-control"></textarea>
         </div>
       </div>
       <div class="form-group text-center">
-        <button type="submit" class="btn btn-sm btn-primary">Enviar Email</button>
-        <P class="pull-left">Pawer by Laboratoria</P>
+        <button class="btn btn-sm btn-primary pull-left">Enviar Email</button>
+      </div>
+      <div class="form-group">
+        <P class="pull-left">Pawer by Equipo Laboratoria</P>
         <p class="pull-right">Report abuse</p>
       </div>
     </form>
