--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
           <h4>Pruebalo Gratis</h4>
           <p>Obten un video gratis en 5 minutos</p>
         </div>
-        <div class="col-md-6 text-left">
-          <button class="btn btn-primary btp">Prueba Gartis</button>
-        </div>
+        <div class="col-md-6 text-left"><a href="contact.html" target="_blank">
+            <button class="btn btn-primary btp">Prueba Gartis</button></a></div>
       </div>
       <div class="row text-center">
         <h2 class="subtitulos">Nuestros Servicios</h2>
@@ -62,7 +61,9 @@
           <p>sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j cjasc acj cj cjas cjs cjsac jascsa cjasc jac ajsc jcs acjas cj scj jas cjsa cjsa c caca</p><img src="image/flecha.png" class="btp mg_cent img-responsive">
         </div>
         <div class="col-md-6 mga6">
-          <p>video</p>
+          <div class="video">
+            <iframe src="https://www.youtube.com/embed/8dndw44XFC4" width="100%" height="305" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -90,17 +91,13 @@
       <div class="row">
         <div class="col-md-6 mgle4 mga6">
           <h2 class="color_blu text-center">Por qué usar<img src="image/logo-2.jpg" class="tam_lg"></h2>
-          <p>Lorem ha adas dad ad asda shhas shhahsha ashahs sjcshc sajcasjcsacspackcjsacsdhajscascjasjsjjas </p>
-          <spam>sjjasdjsajd</spam>
-          <p>sajdnasjdnsajsdasd asdascas cjasjcndjc dacnjdncjadncjdancjandcjda</p>
-          <spam>ajnajdfnajfna</spam>
-          <p>asjnskaakjfdkajad dvjdv dvjdsjvsdv</p>
-          <ul class="btp">
+          <p>Lorem ha adas dad ad asda shhas shhahsha adsa sad sa dsa as dsada dasdsaashahs sjcshc sajcasjcsacspackcjsacsdhajscascjasjsjjas<strong>sjjasdjsajd</strong>sajdnasjd asda sad sadas das d sadsa dsadas dasdasdas dasd dnsajsdasd asdascas cjasjcndjc njdncjadnc <strong>sjjasdjsajd</strong>jdancjandcjdaejndjwndj ewjdnewjnd d csdc dc sd csd csd c sdc dsc sdc s c ejwn:</p>
+          <ul class="mga6">
             <li>A primera vista</li>
             <li>A primera vista</li>
             <li>A primera vista</li>
           </ul>
-          <p>sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j jasjcs acjas cj scj jas cjsa cjsa c caca</p>
+          <p>sajdjsa <strong>sjjasdjsajd</strong> jdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcscdscd cds c sd cdscds cds cc jjjjj casjc j jasjcs acjas cj scj jas cjsa cjsa c caca</p>
         </div>
         <div class="col-md-6 mga6"><img src="image/banner.jpg" class="imgjov"></div>
       </div>
@@ -109,9 +106,8 @@
           <h4>Pruebalo Gratis</h4>
           <p>Obten un video gratis en 5 minutos</p>
         </div>
-        <div class="col-md-6 btp">
-          <button class="btn btn-primary btp">Prueba Gartis</button>
-        </div>
+        <div class="col-md-6 btp"><a href="contact.html" target="_blank">
+            <button class="btn btn-primary btp">Prueba Gartis</button></a></div>
       </div>
       <div class="row fondo_azul">
         <div class="col-md-6 mg2">
